# AuroraVk

./: AuroraVk.sln  CMakeLists.txt  README.md
AuroraVk/: AuroraVk.sln  AuroraVk.vcxproj  AuroraVk.vcxproj.filters
AuroraVk/shaders/: build.bat
AuroraVk/src/: main.cpp
shaders/: build.bat  shader.vert
src/: main.cpp
